# RVC_claude

./: .gitignore  CMakeLists.txt  README.md
.cursor/commands/ooad/: archive-static-analysis-report.md  bootstrap-context.md  configure-cicd-github-actions.md  define-vision.md  design-classes.md  design-interaction.md  design-packages.md  develop-unit-tests-gtest.md  extract-usecases.md  map-to-code.md  model-domain.md  model-ssd.md  plan-system-tests-gui.md  review-phase-checkpoints.md  specify-fr-nfr.md  specify-usecase.md  workflow-pipeline.md
.cursor/rules/ooad/: workflow.md
.cursor/rules/ooad/00-ooad-core/: RULE.md
.cursor/rules/ooad/cicd/: RULE.md
.cursor/rules/ooad/class-design/: RULE.md
.cursor/rules/ooad/domain/: RULE.md
.cursor/rules/ooad/harness-engineering/: RULE.md
.cursor/rules/ooad/implementation/: RULE.md
.cursor/rules/ooad/interaction/: RULE.md
.cursor/rules/ooad/ooi/: RULE.md
.cursor/rules/ooad/reproducibility/: RULE.md  prompt
.cursor/rules/ooad/requirements/: RULE.md
.cursor/rules/ooad/ssd/: RULE.md
.cursor/rules/ooad/static-analysis/: RULE.md
.cursor/rules/ooad/system-test/: RULE.md
.cursor/rules/ooad/unit-test/: RULE.md
.cursor/rules/ooad/usecase/: RULE.md
.cursor/rules/ooad/vision/: RULE.md
.github/workflows/: ci.yml
arch/: system.md  usecases.md
arch/design/: class-diagram.md  implementation-mapping.md  packages.md
arch/design/interaction/: UC-001-start-stop.md  UC-002-forward.md  UC-003-partial-avoid.md  UC-004-enclosure-escape.md  UC-005-dust-boost.md
arch/domain/: model.md
arch/requirements/: fr-nfr.md
arch/ssd/: UC-001-main-success.md  UC-002-forward-cleaning.md  UC-003-partial-obstacle.md  UC-004-enclosure-escape.md  UC-005-dust-boost.md
arch/usecase/: UC-001.md  UC-002.md  UC-003.md  UC-004.md  UC-005.md
arch/vnv/: system-tests.md  traceability-matrix.md
include/rvc/app/: cleaning_coordinator.hpp  controller_config.hpp
include/rvc/domain/: decisions.hpp  default_cleaning_power_policy.hpp  default_navigation_policy.hpp  i_cleaning_power_policy.hpp  i_navigation_policy.hpp
include/rvc/ports/: enums.hpp  i_actuator_port.hpp  i_sensor_port.hpp  sensor_reading.hpp
include/rvc/tech/: grid_actuator.hpp  grid_sensor.hpp  grid_world.hpp
reports/static-analysis/: .gitkeep
src/app/: cleaning_coordinator.cpp
src/domain/: default_cleaning_power_policy.cpp  default_navigation_policy.cpp
src/tech/: grid_world.cpp
system_tests/: _gen_scenarios.py  _py_emulator.py  run_all.py
system_tests/maps/: ST-001.json  ST-002.json  ST-003.json  ST-004.json  ST-005.json  ST-006.json  ST-007.json  ST-008.json  ST-009.json  ST-010.json  ST-011.json  ST-012.json  ST-013.json  ST-014.json  ST-015.json  ST-016.json  ST-017.json  ST-018.json  ST-019.json  ST-020.json  ST-021.json  ST-022.json  ST-023.json  ST-024.json  ST-025.json  ST-026.json  ST-027.json  ST-028.json  ST-029.json  ST-030.json  ST-031.json  ST-032.json
tests/: CMakeLists.txt
tests/integration/: coordinator_grid_integration_test.cpp  scenario_smoke_test.cpp
tests/unit/: cleaning_coordinator_test.cpp  cleaning_power_policy_test.cpp  grid_world_loader_test.cpp  grid_world_test.cpp  navigation_policy_test.cpp  sensor_reading_test.cpp
tools/: rvc_gui.py  rvc_sim.cpp
